Cleaned Code and Fixed Invisible Element Problem
Cleaned up the code and fixed the problem where a user could still
interact with the last page on the empty space in the contact page.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -142,15 +142,8 @@ p{
 #cloud {
 	width:100%;
 	margin-top:25px;
-	/*background: url(../photos/cloud2.svg);
-	background-size:100%;
-	background-repeat:none;*/
 	position:relative;
 	padding-top:0px;
-}
-
-#cloudbuffer{
-	
 }
 
 #cloudbuffer img{
@@ -206,6 +199,7 @@ p{
 
 #hwteam {
 	max-width:1000px;
+	min-width:800px;
 	margin-top:10px;
 	margin-bottom:10px;
 }
@@ -248,18 +242,6 @@ p{
 #body{
 	width:100%;
 	height:100%;
-}
-
-#about{
-
-}
-
-#work{
-
-}
-
-#contact{
-
 }
 
 #contact p{
